# word-freq

./: main.py  pyproject.toml  tox.ini
src/: i_word_frequency_analyzer.py
src/frequency_calculator/: frequency_for_word_analyzer.py  highest_frequency_analyzer.py  most_frequent_N_words_analyzer.py
tests/test_frequency_calculator/: test_frequency_for_word_analyzer.py  test_highest_frequency_analyzer.py  test_most_frequent_N_words_analyzer.py
