[tool.poetry]
name = "frequency_calculator"
version = "0.1.0"
description = "calculator for word frequency"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

black = "^21.5b2"
flake8 = "^3.9.2"
isort = "5.8.0"

tox = "^3.24.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
